# my_test_crew

./: README.md  pyproject.toml
src/my_test_crew/: crew.py  main.py
src/my_test_crew/config/: agents.yaml  tasks.yaml
