[project]
name = "my_test_crew"
version = "0.1.0"
description = "my-test-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
my_test_crew = "my_test_crew.main:run"
run_crew = "my_test_crew.main:run"
train = "my_test_crew.main:train"
replay = "my_test_crew.main:replay"
test = "my_test_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
